--- a/PROJECT-1/FRONTEND/demo.html
+++ b/PROJECT-1/FRONTEND/demo.html
@@ -107,6 +107,6 @@
         <button class="btn-number">0</button>
     </div>
 </div>
-<script src="script.js"></script>
+<script src="demo.js"></script>
 </body>
 </html>
